Enhance user service and notification service functionality
- Updated UserService to include a method for retrieving all users.
- Improved UserGrpcService to handle user last names more gracefully.
- Refactored GrpcClientConfig and UserCacheService for better cache management.
- Modified Dockerfile to expose port 9090 for service accessibility.
- Updated pom.xml to include necessary dependency versions.